# fstec-mcp

./: .env.example  Dockerfile  README.md  docker-compose.yml  env_options.json  mcp-server-catalog.yaml  mcp_instance.py  mcp_tools.json  pyproject.toml  requirements.txt  server.py
agents/: agent-fstec.txt  agent-netscaner.txt  orchestrator.txt
test/: __init__.py  test_integration.py  test_tools.py
tools/: __init__.py  get_vulnerability_details.py  search_vulnerabilities.py  utils.py
